[package]
name = "drift-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
regex = "1.10.2"
reqwest = "0.11.23"
scraper = "0.18.1"
serenity = "0.12.0"
tokio = { version = "1.35.1", features = ["full"] }
