[package]
name = "drift-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
dotenv = "0.15.0"
once_cell = "1.19.0"
regex = "1.10.2"
reqwest = "0.11.23"
roxmltree = "0.19.0"
scraper = "0.18.1"
serenity = "0.12.0"
tokio = { version = "1.35.1", features = ["full"] }
